Need to becareful with dropping duplicates. You can only apply that when the id attributes are present

--- a/Social Network Exercise.ipynb
+++ b/Social Network Exercise.ipynb
@@ -53,6 +53,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cassandra</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Andrew</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jessica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name\n",
+       "0  Cassandra\n",
+       "1     Andrew\n",
+       "2    Jessica"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the names of all students who are friends with someone\n",
+    "# named Gabriel. \n",
+    "gabriels = Highschooler[Highschooler['name']=='Gabriel'][['ID']]\n",
+    "gabriels_friends = gabriels.merge(Friend, left_on= 'ID', right_on='ID1')[['ID2']]\\\n",
+    "                           .merge(Highschooler[['ID','name']], left_on='ID2', right_on='ID')\\\n",
+    "                           .drop_duplicates()[['name']]\n",
+    "gabriels_friends"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
