question regarding mutal likes solved

--- a/Social Network Exercise.ipynb
+++ b/Social Network Exercise.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
        "2    Jessica"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,6 +106,151 @@
     "                           .merge(Highschooler[['ID','name']], left_on='ID2', right_on='ID')\\\n",
     "                           .drop_duplicates()[['name']]\n",
     "gabriels_friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_likes</th>\n",
+       "      <th>name</th>\n",
+       "      <th>grade_likes</th>\n",
+       "      <th>grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Haley</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name_likes   name  grade_likes  grade\n",
+       "9       John  Haley           12     10"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For every student who likes someone 2 or more grades\n",
+    "# younger than themselves, return that student's name \n",
+    "# and grade, and the name and grade of the student they\n",
+    "# like. \n",
+    "likes_grades = Likes.merge(Highschooler, left_on='ID1', right_on='ID')\\\n",
+    "                    .drop('ID', axis=1)\\\n",
+    "                    .merge(Highschooler, left_on='ID2', right_on='ID',\n",
+    "                           suffixes=('_likes', ''))\\\n",
+    "                    .drop('ID', axis=1)\n",
+    "likes_younger_grades = likes_grades[(likes_grades['grade_likes']-likes_grades['grade']) >=2]\n",
+    "out_cols = ['name_likes', 'name', 'grade_likes', 'grade']\n",
+    "likes_younger_grades[out_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>grade_first</th>\n",
+       "      <th>name_first</th>\n",
+       "      <th>grade_second</th>\n",
+       "      <th>name_second</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Cassandra</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Gabriel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Kyle</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Jessica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   grade_first name_first  grade_second name_second\n",
+       "0            9  Cassandra             9     Gabriel\n",
+       "1           12       Kyle            11     Jessica"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For every pair of students who both like each other, return \n",
+    "# the name and grade of both students. Include each pair only\n",
+    "# once, with the two names in alphabetical order. \n",
+    "mutal_like = Likes.merge(Likes, left_on='ID2', right_on='ID1', suffixes=('_first', '_second'))\n",
+    "mutal_like = mutal_like[mutal_like['ID1_first'] == mutal_like['ID2_second']][['ID1_first',\n",
+    "                                                                              'ID2_first']]\n",
+    "mutal_like = mutal_like[mutal_like['ID1_first'] > mutal_like['ID2_first']]\n",
+    "mutal_like.merge(Highschooler, left_on='ID1_first', right_on='ID')\\\n",
+    "          .drop(['ID1_first','ID'], axis=1)\\\n",
+    "          .merge(Highschooler, left_on='ID2_first', right_on='ID', suffixes=('_first', '_second'))\\\n",
+    "          .drop(['ID2_first','ID'], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 2), (2, 1)}"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{(1,2), (2,1), (1,2)}"
    ]
   },
   {
